--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -3,3 +3,33 @@ body {
   font-family: 'Roboto';
   font-style: normal;
 }
+
+.title{
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 132%;
+}
+
+.text{
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 160%;
+}
+
+@media (max-width: 1200px){
+  .title{
+    font-size: 36px;
+  }
+  .text{
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 576px){
+  .title{
+    font-size: 16px;
+  }
+  .text{
+    font-size: 8px;
+  }
+}
