--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -25,11 +25,29 @@ body {
   }
 }
 
-@media (max-width: 576px){
+@media (max-width: 1024px){
   .title{
-    font-size: 16px;
+    font-size: 28px;
   }
   .text{
-    font-size: 8px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 768px){
+  .title{
+    font-size: 20px;
+  }
+  .text{
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 576px){
+  .title{
+    font-size: 14px;
+  }
+  .text{
+    font-size: 7px;
   }
 }
