--- a/backend/frontend/src/components/ease/Ease.css
+++ b/backend/frontend/src/components/ease/Ease.css
@@ -14,8 +14,8 @@
     color: #EA5775;
 }
 .ease__title{
-    color: #FFFFFF;
-    width: 645px;
+    color: #0E1B4F;
+    max-width: 645px;
 }
 .ease__images{
     display: flex;
@@ -24,4 +24,85 @@
 }
 .ease__button{
     margin-right: 25px;
+}
+
+@media (max-width: 1300px){
+    .ease__content-img{
+        max-height: 500px;
+    }
+    .ease__button{
+        max-width: 180px;
+    }
+}
+
+@media (max-width: 1200px){
+    .ease__content-img{
+        max-height: 450px;
+    }
+    .ease__button{
+        max-width: 160px;
+    }
+}
+
+@media (max-width: 1024px){
+    .ease__block{
+        padding: 50px 0;
+    }
+    .ease__content{
+        margin-bottom: 40px;
+    }
+    .ease__images{
+        margin-bottom: 20px;
+    }
+    .ease__content-img{
+        max-height: 340px;
+    }
+    .ease__button{
+        max-width: 120px;
+    }
+}
+
+@media (max-width: 768px){
+    .ease__content-img{
+        max-height: 250px;
+    }
+    .ease__button{
+        max-width: 110px;
+    }
+}
+
+@media (max-width: 576px){
+    .ease__block{
+        padding: 25px 0;
+    }
+    .ease__content{
+        margin-bottom: 20px;
+    }
+    .ease__images{
+        margin-bottom: 10px;
+    }
+    .ease__content-img{
+        max-height: 220px;
+    }
+    .ease__button{
+        max-width: 60px;
+    }
+}
+
+@media (max-width: 480px){
+    .ease__content-img{
+        max-height: 150px;
+    }
+    .ease__button{
+        max-width: 60px;
+    }
+}
+
+@media (max-width: 360px){
+    .ease__content-img{
+        max-height: 130px;
+    }
+    .ease__button{
+        max-width: 60px;
+    }
 }
