--- a/backend/frontend/src/components/General/General.css
+++ b/backend/frontend/src/components/General/General.css
@@ -52,7 +52,14 @@
     max-height: 811px;
 }
 
-@media (max-width: 1024px){
+@media (max-width: 1400px) {
+    .general__img {
+        max-height: 700px;
+    }
+}
+    
+
+@media (max-width: 1100px){
     .general__block{
         margin-top: 67px;
     }
@@ -79,7 +86,7 @@
     }
 }
 
-@media (max-width: 768px){
+@media (max-width: 820px){
     .general__block{
         margin-top: 50px;
     }
