--- a/backend/frontend/src/components/functional/Functional.css
+++ b/backend/frontend/src/components/functional/Functional.css
@@ -7,6 +7,7 @@
     justify-content: space-evenly;
 }
 .functional__item{
+    margin: 0 5px;
     max-width: 245px;
     display: flex;
     flex-direction: column;
@@ -101,3 +102,24 @@
     }
 }
 
+@media (max-width:380px){
+    .functional__block{
+        padding: 25px 0;
+    }
+    .functional__item{
+        max-width: 80px;
+    }
+    .functional__item-icon{
+        max-width: 35px;
+        margin-bottom: 7px;
+    }
+    .functional__item-title{
+        margin-bottom: 3.5px;
+        font-size: 10px;
+        line-height: 12px;
+    }
+    .functional__item-text{
+        font-size: 6px;
+        line-height: 8px;
+    }
+}
