--- a/backend/frontend/src/components/ease/Ease.css
+++ b/backend/frontend/src/components/ease/Ease.css
@@ -72,6 +72,9 @@
 }
 
 @media (max-width: 768px){
+    .ease__container{
+        align-items: center;
+    }
     .ease__content-img{
         max-height: 250px;
     }
