--- a/backend/frontend/src/components/footer/Footer.css
+++ b/backend/frontend/src/components/footer/Footer.css
@@ -12,8 +12,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: flex-start;
 }
-.top_footer img {
+.mail_image{
+    height: 29px;
+}
+.top_footer {
     width: 100%;
     height: auto;
     max-width: 430px;
@@ -57,7 +61,17 @@
 }
 
 @media (max-width: 1024px) {
+    .top_footer{
+        max-width: 350px;
+    }
+    .phone_image{
+        max-height: 29px;
+    }
+    .geo_image{
+        height: 29px;
+    }
     .footer__container {
+        padding: 50px 0;
         margin: 0 100px;
     }
     .phone_text, .geo_text, .bottom_footer {
@@ -71,28 +85,62 @@
 @media (max-width: 768px) {
     .footer__container {
         margin: 0 50px;
-        flex-direction: column;
     }
-    .right_footer {
-        margin-top: 30px;
+    .top_footer{
+        max-width: 300px;
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 600px) {
     .footer__container {
         margin: 0;
+        padding: 25px;
+    }
+    .phone_text, .geo_text, .bottom_footer {
+        font-size: 8px;
+    }
+    .footer_menu a {
+        font-size: 8px; 
+    }
+    .top_footer {
+        max-width: 200px;
+        width: 100%;
+    }
+    .phone_image,
+    .geo_image,
+    .mail_image{
+        max-width: 15px;
+        height: auto;
+    }
+    .mid_footer,
+    .bottom_footer{
+        margin-top: 15px;
+    }
+}
+
+@media (max-width: 400px){
+    .footer__container{
+        padding: 15px;
     }
     .phone_text, .geo_text, .bottom_footer {
         font-size: 6px;
     }
     .footer_menu a {
-        font-size: 8px;  
+        font-size: 6px;  
+        margin-bottom: 8px;
     }
-    /* .mid_footer {
-        flex-direction: column;
+    .top_footer {
+        max-width: 120px;
     }
-    .geo {
-        margin-left: 0;
-        margin-top: 15px;
-    } */
+    .phone_image,
+    .geo_image,
+    .mail_image{
+        width: 8px;
+        height: auto;
+        margin-right: 5px;
+    }
+    .mid_footer,
+    .bottom_footer {
+        margin-top: 10px;
+    }
 }
