--- a/backend/frontend/src/components/header/Header.css
+++ b/backend/frontend/src/components/header/Header.css
@@ -1,7 +1,6 @@
 header {
     display: flex;
     justify-content: space-between;
-    margin: 20px 60px 0 60px;
     border-bottom: 2px solid #D9D9D9;
 }
 .nav-link {
@@ -21,6 +20,9 @@ header {
 }
 
 @media (max-width: 992px) {
+    .navbar-collapse{
+        margin-top: 8px;
+    }
     .logo-img {
         display: none!important;
     }
@@ -28,10 +30,10 @@ header {
         width: 100%;
     }
     nav .container {
-        width: 100%;
-        display: flex;
+        padding: 5px;
+        max-width: 992px;
         justify-content: flex-end!important;
-        align-items: flex-end;
+        margin: 0;
     }
     .navbar-nav {
         align-items: flex-end;
@@ -40,7 +42,7 @@ header {
 
 @media (max-width: 576px) {
     .nav-link {
-        font-size: 8px;
+        font-size: 14px;
         line-height: 116.64%;
     }
 }
