--- a/backend/frontend/src/components/health/Health.css
+++ b/backend/frontend/src/components/health/Health.css
@@ -79,6 +79,9 @@
 }
 
 @media (max-width: 768px){
+    .health__container{
+        align-items: center;
+    }
     .health__content-img{
         max-height: 250px;
     }
