--- a/backend/frontend/src/components/General/General.css
+++ b/backend/frontend/src/components/General/General.css
@@ -48,6 +48,9 @@
     color: #0E1B4F;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.general__button-img{
+    margin-right: 20px;
+}
 .general__img{
     max-height: 811px;
 }
@@ -81,6 +84,10 @@
         font-size: 25px;
         line-height: 30px;
     }
+    .general__button-img{
+        height: 25px;
+        margin-right: 15px;
+    }
     .general__img{
         max-height: 580px;
     }
@@ -105,6 +112,9 @@
         width: 240px;
         font-size: 19.2px;
         line-height: 22.4px;
+    }
+    .general__button-img{
+        height: 19.2px;
     }
     .general__img{
         max-height: 400px;
@@ -137,6 +147,10 @@
         font-size: 16.9176px;
         line-height: 20px;
         margin-bottom: 67px;
+    }
+    .general__button-img{
+        height: 16px;
+        margin-right: 5px;
     }
     .general__img{
         align-items: flex-end;
