--- a/backend/frontend/src/components/leaders/leaders.css
+++ b/backend/frontend/src/components/leaders/leaders.css
@@ -1,13 +1,22 @@
 
 
 .leaders_block {
-    padding: 62px;
+    padding: 62px 0 62px;
 }
 
 .leaders_title {
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
+    line-height: 108%;
+
+    color: #1B1642;
+}
+.leaders_title_leader {
+    width: 100%;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 38px;
     line-height: 108%;
 
     color: #1B1642;
@@ -23,6 +32,7 @@
 .leaders_content_under {
     display: flex;
     justify-content: center;
+    text-align: center;
     margin: 47px 0 73px;
 }
 .leaders_title_block {
@@ -42,6 +52,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 160%;
+    margin-bottom: 43px;
 
     text-align: center;
 
@@ -55,79 +66,164 @@
 }
 .leaders_img {
     margin-bottom: 14px;
+    width: 100%;
 }
+.leaders_block_img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}   
 
 @media (max-width: 1200px){
-    .leaders_img{
-        max-height: 720px;
+    .leaders_container{
+        justify-content: center;
     }
     .leaders_content{
-        max-width: 541px;
-    }
-    .leaders_content-img{
-        max-width: 181px;
-    }
-}
-
-@media (max-width: 1024px){
-    .leaders_block{
-        margin: 60px 0;
-    }
-    .leaders_img{
-        max-height: 550px;
-    }
-    .leaders_content{
-        max-width: 420px;
-    }
-    .leaders_content-img{
-        max-width: 120px;
-    }
-    .leaders_title{
-        margin-bottom: 16px;
-    }
-    .leaders_text{
-        margin-bottom: 30px;
-    }
-}
-
-@media (max-width: 768px){
-    .leaders_img{
-        max-height: 400px;
-    }
-    .leaders_content{
-        max-width: 360px;
+        max-width: 100%;
     }
     .leaders_content-img{
         max-width: 80px;
     }
     .leaders_title{
-        margin-bottom: 12px;
+        margin-bottom: 5px;
+    }
+    leaders_title_leader {
+        margin-bottom: 5px;
     }
     .leaders_text{
         margin-bottom: 20px;
     }
-}
-
-@media (max-width: 576px){
-    .leaders_block{
-        margin: 45px 0;
+    .leaders_content_lower {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
-    .leaders_container{
-        justify-content: center;
-    }
-    .leaders_img{
-        max-height: 230px;
-    }
-    .leaders_content{
-        max-width: 170px;
+    .leaders_block_img {
+        height: auto;
+        width: 45%;
     }
     .leaders_content-img{
         max-width: 50px;
     }
+    .leaders_img{
+        margin-bottom: 6.56px;
+        display: flex;
+        width: 50%;
+    }
+}
+
+@media (max-width: 1024px){
+    .leaders_container{
+        justify-content: center;
+    }
+    .leaders_content{
+        max-width: 100%;
+    }
+    .leaders_content-img{
+        max-width: 80px;
+    }
     .leaders_title{
-        margin-bottom: 12px;
+        margin-bottom: 5px;
+    }
+    leaders_title_leader {
+        width: 50%;
+        margin-bottom: 5px;
+        font-size: 38px;
     }
     .leaders_text{
         margin-bottom: 20px;
+    }
+    .leaders_content_lower {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .leaders_block_img {
+        height: auto;
+        width: 45%;
+    }
+    .leaders_content-img{
+        max-width: 50px;
+    }
+    .leaders_img{
+        margin-bottom: 6.56px;
+        display: flex;
+    }
+}
+
+@media (max-width: 768px){
+    .leaders_container{
+        justify-content: center;
+    }
+    .leaders_content{
+        max-width: 100%;
+    }
+    .leaders_content-img{
+        max-width: 80px;
+    }
+    .leaders_title{
+        margin-bottom: 5px;
+    }
+    leaders_title_leader {
+        width: 50%;
+        margin-bottom: 5px;
+    }
+    .leaders_text{
+        margin-bottom: 20px;
+    }
+    .leaders_content_lower {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .leaders_block_img {
+        height: auto;
+        width: 45%;
+    }
+    .leaders_content-img{
+        max-width: 50px;
+    }
+    .leaders_img{
+        margin-bottom: 6.56px;
+        display: flex;
+    }
+}
+
+@media (max-width: 576px){
+    .leaders_container{
+        justify-content: center;
+    }
+    .leaders_img{
+        margin-bottom: 6.56px;
+        display: flex;
+    }
+    .leaders_content{
+        max-width: 100%;
+    }
+    leaders_title {
+        margin-bottom: 5px;
+       
+    }
+    leaders_title_leader {
+        width: 50%;
+        margin-bottom: 5px;
+    }
+    .leaders_content-img{
+        max-width: 50px;
+    }
+    .leaders_text{
+        margin-bottom: 20px;
+    }
+    .leaders_content_lower {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .leaders_block_img {
+        height: auto;
+        width: 45%;
+    }
+    .leaders_text_block {
+        margin-bottom: 43px;
     }
 }
