--- a/backend/frontend/src/components/tasks/tasks.css
+++ b/backend/frontend/src/components/tasks/tasks.css
@@ -1,11 +1,13 @@
 .tasks__block{
     padding: 81px 0 0;
     background-color: white;
+    display: flex;
+    flex-direction: row;
 }
 .tasks__container{
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    flex-direction: row;
+    /* justify-content: space-between; */
 }
 .tasks__img{
     max-height: 604px;
@@ -14,7 +16,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* max-width: 541px; */
+    width: 100%;
+    
+}
+.tasks_content_icon{
+    height: 50%;
+    display: flex;
+    align-self: end;
+    flex-direction: column;
+    
 }
 .tasks__title{
     margin-bottom: 12px;
@@ -33,7 +43,7 @@
 .tasks__text{
     margin-bottom: 79px;
     width: 723px;
-    height: 126px;
+    /* height: 126px; */
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
@@ -62,7 +72,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    min-width: 308px;
+    min-width: 378px;
     min-height: 86px;
     margin-bottom: 35px;
     
@@ -88,76 +98,130 @@
     color: #575A7B;
 }
 @media (max-width: 1200px){
-    .tasks_img{
-        max-height: 720px;
+    .tasks__block {
+        flex-direction: column;
     }
-    .tasks_content{
-        max-width: 541px;
+    .tasks__text {
+        font-weight: 700;
+        /* font-size: 32px; */
+        line-height: 108%;
+    }
+    .tasks_content_icon{
+        display: none;
     }
     .tasks_content-img{
         max-width: 181px;
     }
+    .tasks__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 328px;
+        min-height: 86px;
+        margin-bottom: 35px;
+        
+    }
 }
 
 @media (max-width: 1024px){
-    .tasks_block{
-        margin: 60px 0;
+    .tasks__block {
+        flex-direction: column;
     }
-    .tasks_img{
-        max-height: 550px;
+    .tasks__text {
+        font-weight: 700;
+        /* font-size: 32px; */
+        line-height: 108%;
     }
-    .tasks_content{
-        max-width: 420px;
+    .tasks_content_icon{
+        display: none; 
     }
     .tasks_content-img{
-        max-width: 120px;
+        max-width: 181px;
     }
-    .tasks_title{
-        margin-bottom: 16px;
+    .tasks__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
-    .tasks_text{
-        margin-bottom: 30px;
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 328px;
+        min-height: 86px;
+        margin-bottom: 35px;
+        
     }
 }
 
 @media (max-width: 768px){
-    .tasks_img{
-        max-height: 400px;
+    .tasks__block {
+        flex-direction: column;
     }
-    .tasks_content{
-        max-width: 360px;
+    .tasks__text {
+        width: auto;
+        height: auto;
+        font-weight: 700;
+        /* font-size: 32px; */
+        line-height: 108%;
+    }
+    .tasks_content_icon{
+        display: none;
+        
     }
     .tasks_content-img{
-        max-width: 80px;
+        max-width: 181px;
     }
-    .tasks_title{
-        margin-bottom: 12px;
+    .tasks__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
-    .tasks_text{
-        margin-bottom: 20px;
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 238px;
+        min-height: 86px;
+        margin-bottom: 35px;
+        
     }
 }
 
 @media (max-width: 576px){
-    .tasks_block{
-        margin: 45px 0;
+    .tasks__block {
+        flex-direction: column;
     }
-    .tasks_container{
-        justify-content: center;
+    .tasks__text {
+        width: auto;
+        height: auto;
+        font-weight: 700;
+        /* font-size: 32px; */
+        line-height: 108%;
     }
-    .tasks_img{
-        max-height: 230px;
-    }
-    .tasks_content{
-        max-width: 170px;
+    .tasks_content_icon{
+        display: none;
     }
     .tasks_content-img{
-        max-width: 50px;
+        max-width: 181px;
     }
-    .tasks_title{
-        margin-bottom: 12px;
+    .tasks__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
-    .tasks_text{
-        margin-bottom: 20px;
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 228px;
+        min-height: 86px;
+        margin-bottom: 35px;
+        
     }
 }
