--- a/backend/frontend/src/components/contactsMap/ContactsMap.css
+++ b/backend/frontend/src/components/contactsMap/ContactsMap.css
@@ -7,11 +7,12 @@
 }
 .contactsMap__map{
     flex-grow: 1;
-    height: 600px;
+    height: 70vh;
 }
 .contactsMap__content{
-    width: 670px;
-    height: 600px;
+    width: 650px;
+    /* height: 700px; */
+    height: 70vh;
     padding: 0 50px;
     display: flex;
     flex-direction: column;
@@ -47,20 +48,23 @@
 }
 
 @media(max-width: 1024px){
+    .contactsMap__container{
+        flex-direction: column;
+    }
     .contactsMap__content{
-        height: 600px;
-        width: 400px;
+        height: 220px;
+        width: 100%;
     }
     .contactsMap__map{
-        height: 600px;
+        /* height: 900px; */
     }
     .contactsMap__content-title{
-        margin-bottom: 50px;
+        margin-bottom: 30px;
         font-size: 24px;
         line-height: 34px;
     }
     .contactsMap__content-address{
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     .contactsMap__content-name,
     .contactsMap__content-address{
@@ -69,25 +73,17 @@
 }
 
 @media(max-width: 992px){
-    .contactsMap__container{
-        flex-direction: column;
-    }
     .contactsMap__content{
         padding: 30px;
         height: auto;
-        width: 100%;
     }
     .contactsMap__map{
-        height: 500px;
+        /* height: 500px; */
         width: 100%;
     }
     .contactsMap__content-title{
-        margin-bottom: 30px;
         font-size: 20px;
         line-height: 28px;
-    }
-    .contactsMap__content-address{
-        margin-bottom: 20px;
     }
     .contactsMap__content-name,
     .contactsMap__content-address{
@@ -97,7 +93,7 @@
 
 @media(max-width: 768px){
     .contactsMap__map{
-        height: 500px;
+        /* height: 500px; */
     }
     .contactsMap__content{
         padding: 30px 50px;
@@ -118,7 +114,7 @@
 
 @media(max-width: 576px){
     .contactsMap__map{
-        height: 550px;
+        /* height: 550px; */
     }
     .contactsMap__content{
         padding: 25px;
