--- a/backend/frontend/src/components/leaders/leaders.css
+++ b/backend/frontend/src/components/leaders/leaders.css
@@ -1,7 +1,7 @@
 
 
 .leaders_block {
-    padding: 62px 0 62px;
+    padding: 62px 0 0;
 }
 
 .leaders_title {
@@ -62,7 +62,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 130px;
+    margin-bottom: 62px;
 }
 .leaders_img {
     margin-bottom: 14px;
@@ -86,12 +86,14 @@
     }
     .leaders_title{
         margin-bottom: 5px;
+        font-size: 43px
     }
     leaders_title_leader {
         margin-bottom: 5px;
     }
     .leaders_text{
         margin-bottom: 20px;
+        font-size: 15px;
     }
     .leaders_content_lower {
         display: flex;
@@ -163,13 +165,16 @@
     }
     .leaders_title{
         margin-bottom: 5px;
+        font-size: 35px
     }
-    leaders_title_leader {
+    .leaders_title_leader {
         width: 50%;
+        font-size: 30px;
         margin-bottom: 5px;
     }
     .leaders_text{
         margin-bottom: 20px;
+        font-size: 12px;
     }
     .leaders_content_lower {
         display: flex;
@@ -190,6 +195,9 @@
 }
 
 @media (max-width: 576px){
+    .leaders_block {
+        padding: 42px 0 0;
+    }
     .leaders_container{
         justify-content: center;
     }
@@ -200,12 +208,13 @@
     .leaders_content{
         max-width: 100%;
     }
-    leaders_title {
+    .leaders_title {
         margin-bottom: 5px;
-       
+        font-size: 25px
     }
-    leaders_title_leader {
+    .leaders_title_leader {
         width: 50%;
+        font-size: 20px;
         margin-bottom: 5px;
     }
     .leaders_content-img{
@@ -213,6 +222,7 @@
     }
     .leaders_text{
         margin-bottom: 20px;
+        font-size: 10px;
     }
     .leaders_content_lower {
         display: flex;
@@ -225,5 +235,12 @@
     }
     .leaders_text_block {
         margin-bottom: 43px;
+        font-size: 12px;
+    }
+    .leaders_title_block {
+        font-size: 16px;
+    }
+    .leaders_content_under {
+        margin: 27px 0 33px;
     }
 }
