--- a/backend/frontend/src/components/tasks/tasks.css
+++ b/backend/frontend/src/components/tasks/tasks.css
@@ -3,11 +3,13 @@
     background-color: white;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 .tasks__container{
     display: flex;
-    flex-direction: row;
-    /* justify-content: space-between; */
+}
+.tasks__content-container{
+    display: flex;
 }
 .tasks__img{
     max-height: 604px;
@@ -22,7 +24,7 @@
 .tasks_content_icon{
     height: 50%;
     display: flex;
-    align-self: end;
+    align-self: flex-start;
     flex-direction: column;
     
 }
@@ -55,8 +57,8 @@
     max-width: 181px;
 }
 
-.tasks_content_under {
-    display: flex;
+.tasks_content_text{
+    height: 35.6%;
 }
 .tasks_text_title {
     display: flex;
@@ -64,15 +66,15 @@
 }
 .tasks_under_text {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 600px;
 }
 .tasks_text_block {
     display: flex;
     align-items: center;
     flex-direction: column;
-    min-width: 378px;
+    min-width: 250px;
     min-height: 86px;
     margin-bottom: 35px;
     
@@ -97,22 +99,32 @@
 
     color: #575A7B;
 }
-@media (max-width: 1200px){
-    .tasks__block {
+.tasks_content_under {
+    display: flex;
+    flex-direction: row;
+}
+@media (max-width: 1480px){
+    .tasks__block{
+        display: flex;
         flex-direction: column;
+    }
+    .tasks__container.container {
+        display: flex;
+        flex-direction: row;
+        justify-content: right; 
     }
     .tasks__text {
         font-weight: 700;
-        /* font-size: 32px; */
+        font-size: 45px;
         line-height: 108%;
     }
-    .tasks_content_icon{
-        display: none;
+    .tasks_content_under {
+        width: auto;
     }
     .tasks_content-img{
         max-width: 181px;
     }
-    .tasks__container{
+    .tasks__content-container{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -121,10 +133,101 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        min-width: 328px;
+        min-width: 208px;
         min-height: 86px;
         margin-bottom: 35px;
         
+    }
+    .tasks__content{
+        width: 75%;
+    }
+}
+@media (max-width: 1399px){
+    .tasks__block{
+        display: flex;
+        flex-direction: column;
+    }
+    .tasks__container.container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center; 
+    }
+    .tasks__text {
+        font-weight: 700;
+        font-size: 45px;
+        line-height: 108%;
+    }
+    .tasks_content_under {
+        width: auto;
+    }
+    .tasks_content-img{
+        max-width: 181px;
+    }
+    .tasks__content-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 208px;
+        min-height: 86px;
+        margin-bottom: 35px;
+        
+    }
+    .tasks__content{
+        width: 75%;
+    }
+}
+
+@media (max-width: 1200px){
+    .tasks__block{
+        display: flex;
+        flex-direction: column;
+    }
+    .tasks__container-container {
+        display: flex;
+        flex-direction: row; 
+    }
+    .tasks__text {
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 108%;
+    }
+    .tasks_content_under {
+        width: auto;
+    }
+    .tasks_content-img{
+        max-width: 181px;
+    }
+    .tasks__content-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 208px;
+        min-height: 86px;
+        margin-bottom: 35px;
+        
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 150px;
+    }
+    .tasks_text_title {
+        font-size: 40px;
+    }
+    .tasks_text_text {
+        font-size: 17px;
+    }
+    .tasks__img {
+        max-height: 550px;
     }
 }
 
@@ -134,94 +237,281 @@
     }
     .tasks__text {
         font-weight: 700;
-        /* font-size: 32px; */
         line-height: 108%;
+        font-size: 39px;
+        width: auto;
     }
-    .tasks_content_icon{
-        display: none; 
+    .tasks__title { 
+        font-size: 15px;
+        margin-bottom: 5px;
     }
     .tasks_content-img{
         max-width: 181px;
-    }
-    .tasks__container{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
     }
     .tasks_text_block {
         display: flex;
         align-items: center;
         flex-direction: column;
-        min-width: 328px;
+        min-width: 210px;
         min-height: 86px;
-        margin-bottom: 35px;
-        
+        margin-bottom: 35px;  
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 150px;
     }
 }
-
-@media (max-width: 768px){
-    .tasks__block {
+@media (max-width: 991px){
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
         flex-direction: column;
+        min-width: 140px;
+        min-height: 86px;
+        margin-bottom: 35px;  
+    }
+    .tasks_text_title {
+        font-size: 34px;
+    }
+    .tasks_text_text {
+        font-size: 15px;
+    }
+    .tasks__img {
+        max-height: 550px;
+    }
+    .tasks__title {
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
+    
+}
+
+@media (max-width: 767px){
+    .tasks__block {
+        padding: 51px 0 0;
     }
     .tasks__text {
-        width: auto;
-        height: auto;
-        font-weight: 700;
-        /* font-size: 32px; */
-        line-height: 108%;
-    }
-    .tasks_content_icon{
-        display: none;
-        
-    }
-    .tasks_content-img{
-        max-width: 181px;
-    }
-    .tasks__container{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        font-size: 30px;
+        width: 500px;
     }
     .tasks_text_block {
         display: flex;
         align-items: center;
         flex-direction: column;
-        min-width: 238px;
-        min-height: 86px;
-        margin-bottom: 35px;
-        
+        min-width: 130px;
+        min-height: 85px;
+        margin-bottom: 35px;  
     }
+    .tasks_text_title {
+        font-size: 29px;
+    }
+    .tasks_text_text {
+        font-size: 15px;
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 100px;
+    }
+    .tasks__img {
+        max-height: 470px;
+    }
+    
+    
 }
 
 @media (max-width: 576px){
     .tasks__block {
-        flex-direction: column;
+        padding: 51px 0 0;
     }
     .tasks__text {
+        font-size: 20px;
         width: auto;
-        height: auto;
-        font-weight: 700;
-        /* font-size: 32px; */
-        line-height: 108%;
-    }
-    .tasks_content_icon{
-        display: none;
-    }
-    .tasks_content-img{
-        max-width: 181px;
-    }
-    .tasks__container{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
     }
     .tasks_text_block {
         display: flex;
         align-items: center;
         flex-direction: column;
-        min-width: 228px;
-        min-height: 86px;
-        margin-bottom: 35px;
-        
+        min-width: 120px;
+        min-height: 85px;
+        margin-bottom: 35px;  
+    }
+    .tasks_text_title {
+        font-size: 29px;
+    }
+    .tasks_text_text {
+        font-size: 15px;
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 80px;
+    }
+    .tasks__img {
+        max-height: 470px;
+    }
+    
+    
+}
+@media (max-width: 493px){
+    .tasks__block {
+        padding: 41px 0 0;
+    }
+    .tasks__text {
+        font-size: 19px;
+        width: auto;
+    }
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 90px;
+        min-height: 85px;
+        margin-bottom: 35px;  
+    }
+    .tasks_text_title {
+        font-size: 22px;
+    }
+    .tasks_text_text {
+        font-size: 12px;
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 80px;
+    }
+    .tasks__img {
+        max-height: 370px;
+    }
+    .tasks_content_under {
+        height: 200px;
+    }
+    
+    
+}
+@media (max-width: 405px){
+    .tasks__container.container{
+        height: 300px;
+    }
+    .tasks__block {
+        padding: 31px 0 0;
+    }
+    .tasks__title {
+        font-size: 9px;
+    }
+    .tasks__text {
+        font-size: 17px;
+        width: auto;
+    }
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 90px;
+        min-height: 85px;
+        margin-bottom: 35px;  
+    }
+    .tasks_text_title {
+        font-size: 20px;
+    }
+    .tasks_text_text {
+        font-size: 10px;
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 75px;
+    }
+    .tasks__img {
+        max-height: 300px;
+    }
+    .tasks_content_under {
+        height: 150px;
+    }
+    
+    
+}
+@media (max-width: 367px){
+    .tasks__container.container{
+        height: 300px;
+    }
+    .tasks__block {
+        padding: 31px 0 0;
+    }
+    .tasks__title {
+        font-size: 8px;
+    }
+    .tasks__text {
+        font-size: 15px;
+        width: auto;
+    }
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 70px;
+        min-height: 85px;
+        margin-bottom: 0;  
+    }
+    .tasks_text_title {
+        font-size: 12px;
+    }
+    .tasks_text_text {
+        font-size: 8px;
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 55px;
+    }
+    .tasks__img {
+        max-height: 250px;
+    }
+    .tasks_content_under {
+        height: 150px;
+    }  
+}
+@media (max-width: 285px){
+    .tasks__container.container{
+        height: 300px;
+    }
+    .tasks__block {
+        padding: 21px 0 0;
+    }
+    .tasks__title {
+        font-size: 8px;
+        height: 20px;
+    }
+    .tasks__text {
+        font-size: 13px;
+        width: auto;
+        margin: 0;
+    }
+    .tasks_text_block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-width: 70px;
+        min-height: 85px;
+        margin-bottom: 0;  
+    }
+    .tasks_text_title {
+        font-size: 12px;
+    }
+    .tasks_text_text {
+        font-size: 8px;
+    }
+    .tasks_content_icon{
+        height: 50%;
+        width: 45px;
+    }
+    .tasks__img {
+        max-height: 200px;
+    }
+    .tasks_content_under {
+        height: 150px;
+    }  
+    .tasks_content_text {
+        height: 80px;
+    }
+    .tasks__container.container {
+        height: 250px;
     }
 }
+
+
