Updated tasks component

--- a/backend/frontend/src/components/tasks/Tasks.css
+++ b/backend/frontend/src/components/tasks/Tasks.css
@@ -1,32 +1,25 @@
 .tasks__block{
     padding: 81px 0 0;
     background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.tasks__container{
-    display: flex;
-}
-.tasks__content-container{
-    display: flex;
 }
 .tasks__img{
     max-height: 604px;
+}
+.tasks__container{
+    display: flex;
+    flex-wrap: wrap;
 }
 .tasks__content{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
-    
+    flex-grow: 1;
 }
 .tasks_content_icon{
     height: 50%;
     display: flex;
     align-self: flex-start;
     flex-direction: column;
-    
 }
 .tasks__title{
     margin-bottom: 12px;
@@ -55,10 +48,6 @@
 }
 .tasks__content-img{
     max-width: 181px;
-}
-
-.tasks_content_text{
-    height: 35.6%;
 }
 .tasks_text_title {
     display: flex;
@@ -105,8 +94,8 @@
 }
 @media (max-width: 1480px){
     .tasks__block{
-        display: flex;
-        flex-direction: column;
+        /* display: flex; */
+        /* flex-direction: column; */
     }
     .tasks__container.container {
         display: flex;
@@ -143,10 +132,10 @@
     }
 }
 @media (max-width: 1399px){
-    .tasks__block{
+    /* .tasks__block{
         display: flex;
         flex-direction: column;
-    }
+    } */
     .tasks__container.container {
         display: flex;
         flex-direction: row;
@@ -175,7 +164,6 @@
         min-width: 208px;
         min-height: 86px;
         margin-bottom: 35px;
-        
     }
     .tasks__content{
         width: 75%;
@@ -183,10 +171,10 @@
 }
 
 @media (max-width: 1200px){
-    .tasks__block{
+    /* .tasks__block{
         display: flex;
         flex-direction: column;
-    }
+    } */
     .tasks__container-container {
         display: flex;
         flex-direction: row; 
@@ -232,9 +220,9 @@
 }
 
 @media (max-width: 1024px){
-    .tasks__block {
+    /* .tasks__block {
         flex-direction: column;
-    }
+    } */
     .tasks__text {
         font-weight: 700;
         line-height: 108%;
