--- a/backend/frontend/src/components/tasks/Tasks.css
+++ b/backend/frontend/src/components/tasks/Tasks.css
@@ -64,7 +64,6 @@
     align-items: center;
     flex-direction: column;
     min-width: 250px;
-    min-height: 86px;
     margin-bottom: 35px;
     
 }
@@ -123,7 +122,6 @@
         align-items: center;
         flex-direction: column;
         min-width: 208px;
-        min-height: 86px;
         margin-bottom: 35px;
         
     }
@@ -162,7 +160,6 @@
         align-items: center;
         flex-direction: column;
         min-width: 208px;
-        min-height: 86px;
         margin-bottom: 35px;
     }
     .tasks__content{
@@ -200,7 +197,6 @@
         align-items: center;
         flex-direction: column;
         min-width: 208px;
-        min-height: 86px;
         margin-bottom: 35px;
         
     }
@@ -234,19 +230,20 @@
         margin-bottom: 5px;
     }
     .tasks_content-img{
-        max-width: 181px;
+        display: none;
     }
     .tasks_text_block {
         display: flex;
         align-items: center;
         flex-direction: column;
         min-width: 210px;
-        min-height: 86px;
         margin-bottom: 35px;  
     }
     .tasks_content_icon{
-        height: 50%;
-        width: 150px;
+        display: none;
+    }
+    .tasks_under_text {
+        width: 100%;
     }
 }
 @media (max-width: 991px){
@@ -255,7 +252,6 @@
         align-items: center;
         flex-direction: column;
         min-width: 140px;
-        min-height: 86px;
         margin-bottom: 35px;  
     }
     .tasks_text_title {
@@ -286,8 +282,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        min-width: 130px;
-        min-height: 85px;
+        min-width: 180px;
         margin-bottom: 35px;  
     }
     .tasks_text_title {
@@ -312,15 +307,18 @@
         padding: 51px 0 0;
     }
     .tasks__text {
+        margin-bottom: 30px;
         font-size: 20px;
         width: auto;
+    }
+    .tasks_under_text{
+        justify-content: space-evenly;
     }
     .tasks_text_block {
         display: flex;
         align-items: center;
         flex-direction: column;
-        min-width: 120px;
-        min-height: 85px;
+        min-width: 190px;
         margin-bottom: 35px;  
     }
     .tasks_text_title {
@@ -352,7 +350,6 @@
         align-items: center;
         flex-direction: column;
         min-width: 90px;
-        min-height: 85px;
         margin-bottom: 35px;  
     }
     .tasks_text_title {
@@ -393,7 +390,6 @@
         align-items: center;
         flex-direction: column;
         min-width: 90px;
-        min-height: 85px;
         margin-bottom: 35px;  
     }
     .tasks_text_title {
