--- a/backend/frontend/src/components/leaders/Leaders.css
+++ b/backend/frontend/src/components/leaders/Leaders.css
@@ -178,6 +178,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        margin-bottom: 0;
     }
     .leaders_block_img {
         height: auto;
