--- a/backend/frontend/src/components/showboat/Showboat.css
+++ b/backend/frontend/src/components/showboat/Showboat.css
@@ -85,9 +85,13 @@
     }
 }
 @media (max-width: 768px){
+    .showboat_block{
+        padding: 30px 0;
+    }
     .showboat_block_img {
         height: auto;
         width: 26%;
+        margin-bottom: 0;
     }
     .showboat_title {
         font-weight: 700;
@@ -103,7 +107,7 @@
     .showboat_img {
         width: 55.44px;
         height: 55.44px;
-        margin-bottom: 29px;
+        margin-bottom: 20px;
     }
 }
 
@@ -129,7 +133,6 @@
     .showboat_img {
         width: 55.44px;
         height: 55.44px;
-        margin-bottom: 29px;
     }
 }
 @media (max-width: 300px){
@@ -154,6 +157,5 @@
     .showboat_img {
         width: 55.44px;
         height: 55.44px;
-        margin-bottom: 29px;
     }
 }
