--- a/backend/frontend/src/components/footer/Footer.css
+++ b/backend/frontend/src/components/footer/Footer.css
@@ -11,7 +11,6 @@
 .left_footer {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
 }
 .mail_image{
@@ -60,7 +59,7 @@
     margin-bottom: 15px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1100px) {
     .top_footer{
         max-width: 350px;
     }
@@ -79,6 +78,7 @@
     }
     .footer_menu a {
         font-size: 16px;  
+        margin-bottom: 8px;
     }
 }
 
@@ -91,7 +91,7 @@
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
     .footer__container {
         margin: 0;
         padding: 25px;
@@ -100,7 +100,7 @@
         font-size: 8px;
     }
     .footer_menu a {
-        font-size: 12px; 
+        font-size: 8px; 
     }
     .top_footer {
         max-width: 200px;
@@ -126,11 +126,13 @@
         font-size: 6px;
     }
     .footer_menu a {
-        font-size: 12px;  
-        margin-bottom: 8px;
+        font-size: 8px;
     }
     .top_footer {
         max-width: 120px;
+    }
+    .geo{
+        margin-left: 10px;
     }
     .phone_image,
     .geo_image,
