--- a/backend/frontend/src/components/General/General.css
+++ b/backend/frontend/src/components/General/General.css
@@ -1,5 +1,5 @@
 .general__block{
-    margin-top: 95px;
+    padding-top: 95px;
 }
 .general__container{
     margin-left: 150px;
@@ -64,7 +64,7 @@
 
 @media (max-width: 1100px){
     .general__block{
-        margin-top: 67px;
+        padding-top: 67px;
     }
     .general__container{
         margin-left: 100px;
@@ -95,7 +95,7 @@
 
 @media (max-width: 820px){
     .general__block{
-        margin-top: 50px;
+        padding-top: 50px;
     }
     .general__container{
         margin-left: 50px;
@@ -123,7 +123,7 @@
 
 @media (max-width: 576px){
     .general__block{
-        margin-top: 30px;
+        padding-top: 30px;
     }
     .general__container{
         flex-direction: column;
