--- a/backend/frontend/src/components/header/Header.css
+++ b/backend/frontend/src/components/header/Header.css
@@ -1,7 +1,11 @@
 header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
     display: flex;
     justify-content: space-between;
     border-bottom: 2px solid #D9D9D9;
+    background: #F3F8FF;
 }
 .nav-link {
     display: flex;
