--- a/backend/frontend/src/components/tasks/Tasks.css
+++ b/backend/frontend/src/components/tasks/Tasks.css
@@ -8,6 +8,7 @@
 .tasks__container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 .tasks__content{
     display: flex;
