--- a/backend/frontend/src/components/footer/Footer.css
+++ b/backend/frontend/src/components/footer/Footer.css
@@ -3,7 +3,7 @@
     color: white;
 }
 .footer__container {
-    margin: 0 150px;
+    /* margin: 0 150px; */
     padding: 75px 0;
     display: flex;
     justify-content: space-between;
@@ -70,8 +70,8 @@
         height: 29px;
     }
     .footer__container {
-        padding: 50px 0;
-        margin: 0 100px;
+        /* padding: 50px 0;
+        margin: 0 100px; */
     }
     .phone_text, .geo_text, .bottom_footer {
         font-size: 13px;
@@ -84,7 +84,7 @@
 
 @media (max-width: 768px) {
     .footer__container {
-        margin: 0 50px;
+        /* margin: 0 50px; */
     }
     .top_footer{
         max-width: 300px;
@@ -93,8 +93,8 @@
 
 @media (max-width: 650px) {
     .footer__container {
-        margin: 0;
-        padding: 25px;
+        /* margin: 0;
+        padding: 25px; */
     }
     .phone_text, .geo_text, .bottom_footer {
         font-size: 8px;
@@ -120,7 +120,7 @@
 
 @media (max-width: 400px){
     .footer__container{
-        padding: 15px;
+        /* padding: 15px; */
     }
     .phone_text, .geo_text, .bottom_footer {
         font-size: 6px;
