--- a/backend/frontend/src/components/header/Header.css
+++ b/backend/frontend/src/components/header/Header.css
@@ -2,10 +2,12 @@ header {
     position: sticky;
     top: 0;
     z-index: 100;
-    display: flex;
-    justify-content: space-between;
     border-bottom: 2px solid #D9D9D9;
     background: #F3F8FF;
+}
+.header__container{
+    display: flex;
+    justify-content: space-between;
 }
 .nav-link {
     display: flex;
