--- a/frontend/src/components/community/Community.css
+++ b/frontend/src/components/community/Community.css
@@ -3,6 +3,9 @@
 }
 .community__img{
     max-width: 650px;
+    width: 100%;
+    height: fit-content;
+    align-self: center;
 }
 .community__content{
     display: flex;
@@ -81,7 +84,7 @@
         max-width: 170px;
     }
     .community__img{
-        max-width: 150px;
+        max-width: 200px;
     }
     .community__title{
         margin-bottom: 16px;
@@ -91,5 +94,10 @@
     }
     .community__icon{
         max-width: 70px;
+    }
+}
+@media(max-width: 400px){
+    .community__img{
+        max-width: 150px;
     }
 }
