--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -9,6 +9,11 @@ header {
     display: flex;
     justify-content: space-between;
 }
+.header__title{
+    margin-left: 10px;
+    font-size: 24px;
+    color: #0E1B4F;
+}
 .nav-link {
     display: flex;
     justify-content: center;
@@ -25,6 +30,9 @@ header {
 @media (max-width: 1200px){
     .nav-link {
         font-size: 16px;
+    }
+    .header__title{
+        margin-left: 6px;
     }
 }
 
