--- a/frontend/src/components/General/General.css
+++ b/frontend/src/components/General/General.css
@@ -47,9 +47,9 @@
     color: #0E1B4F;
     text-decoration: none;
 
-    background: #FFFFFF;
-    box-shadow: 0px 4px 57px rgba(0, 0, 0, 0.1);
-    border-radius: 87px;
+    background: #F1F5F9;
+    box-shadow: 8px 8px 16px #C9D9E8, -8px -8px 16px #FFFFFF;
+    border-radius: 51px;
 }
 .general__button:hover{
     color: #0E1B4F;
